fixtures/positive/semicolon_structure.inc
---
title = Semicolon data
[structure]
delimiter = ;
---
name;score
Ada;21
Babbage;12
