fixtures/negative/repeated_key.inc
---
title = A
title = B
---
name,score
Ada,21
